fixed styling for add transaction form and changed order of select item fixed alignment to add button with text box

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,7 +16,7 @@
 
 header, nav, hgroup, section, article, footer { display: block; }
 
-body {
+body, button, input, select, textarea {
   font-family: $content-font;
   color: $text-color;
 }
