--- a/app/assets/stylesheets/portfolios.css.scss
+++ b/app/assets/stylesheets/portfolios.css.scss
@@ -211,7 +211,7 @@ body.portfolios.edit {
 body.portfolios.add_transaction {
   @include simple-form;
   #type_of_investment_select {
-    margin-left: 7em;
+    margin-left: 77px;
     label {
       color: $base-color;
       padding-right: 0.5em;
